--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ for (var i = 0; i < btns.length; i++) {
             <section class="hero">
                <h2>PROMO!!</h2>
                  <span class="responsive">
-                    <img src="file/promo.png" style="height:400px;">
+                    <img src="promo.png" style="height:400px;">
                  </span>
             </section>
 
