--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ for (var i = 0; i < btns.length; i++) {
                          Brand Xiaomi
                         <span class="responsive">
                            <table><tr>
-<td><h3>Xiaomi Redmi 2<img src="file/Xiaomi2.JPG" style="width:300px;height:200px;"><button type="button" class="button">Beli!</button></h3></td>
-<td><h3>Xiaomi Redmi Note 5<img src="file/xiaomi3.JPG" style="width:300px;height:200px;"><button type="button" class="button">Beli!</button></h3></td>
-<td><h3>Xiaomi Redmi Note 7<img src="file/xiaomi.JPG" style="width:300px;height:200px;"><button type="button" class="button">Beli!</button></h3></td>
+<td><h3>Xiaomi Redmi 2<img src="Xiaomi2.JPG" style="width:300px;height:200px;"><button type="button" class="button">Beli!</button></h3></td>
+<td><h3>Xiaomi Redmi Note 5<img src="xiaomi3.JPG" style="width:300px;height:200px;"><button type="button" class="button">Beli!</button></h3></td>
+<td><h3>Xiaomi Redmi Note 7<img src="xiaomi.JPG" style="width:300px;height:200px;"><button type="button" class="button">Beli!</button></h3></td>
 </tr></table>
                               
 					
